# src/server/routes/server.routes.ts
@@ -1,7 +1,11 @@
 import { Router } from 'express'
 import { deserializeUser, validateResource } from '../../middlewares'
 import { adminAuthorize } from '../../middlewares/admin-authorize'
-import { createServerHandler, findAllServerHandler } from '../controller'
+import {
+  createServerHandler,
+  findAllServerHandler,
+  findByIdHandler,
+} from '../controller'
 import { CreateServerSchema } from '../schemas'
 
 export const serverRoutes = () => {
@@ -15,6 +19,7 @@ export const serverRoutes = () => {
     createServerHandler,
   )
   router.get('/', findAllServerHandler)
+  router.get('/:id', deserializeUser, findByIdHandler)
 
   return router
 }
